...
                    android:backgroundTint="@color/lightBlue"
                    android:fontFamily="@font/sfpro"
                    android:text="Jobs Posted"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/rateUser"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/lightBlue"
                    android:fontFamily="@font/sfpro"
...
